feat: adjust image controller and service
